add Radar Chart view

--- a/src/stories/GettingStarted.mdx
+++ b/src/stories/GettingStarted.mdx
@@ -3,11 +3,6 @@ import { Meta } from "@storybook/addon-docs/blocks";
 import Logo from './assets/logo.png';
 import Github from "./assets/github.svg";
 import Discord from "./assets/discord.svg";
-import Youtube from "./assets/youtube.svg";
-import Tutorials from "./assets/tutorials.svg";
-import Styling from "./assets/styling.png";
-import Context from "./assets/context.png";
-import Assets from "./assets/assets.png";
 import {
   FolderSkeleton,
   GallerySkeleton,
@@ -16,7 +11,7 @@ import {
   LinearCalendarSkeleton,
   HeatmapSkeleton,
   // ThreeDCarouselSkeleton
-} from ".//mocks";
+} from "./mocks";
 
 export const RightArrow = () => <svg
     viewBox="0 0 14 14"
